feat: alist 检查更次